# dynamic-risk-assessment-system

./: .gitignore  README.md  apicalls.py  config.json  crontab.txt  pyproject.toml
data/ingesteddata/: apireturns.txt
dynamic_risk_assessment_system/: app.py  ingestion.py
dynamic_risk_assessment_system/diagnostics/: diagnostics.py
dynamic_risk_assessment_system/model_helpers/: deployment.py  scoring.py  training.py
dynamic_risk_assessment_system/reporting/: reporting.py
models/models/: apireturns.txt
models/practicemodels/: apireturns.txt  trainedmodel.pkl
models/production_deployment/: trainedmodel.pkl
process_automation/: apicalls.py  config.json  fullprocess.py
