[project]
name = "dynamic-risk-assessment-system"
version = "0.1.0"
description = "Project for dynamic risk assessment system"
authors = [
    {name = "Sreeni1204",email = "hvsreenivasa93@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.1)",
    "gunicorn (>=23.0.0)",
    "matplotlib (>=3.10.5)",
    "pandas (>=2.3.1)",
    "scikit-learn (>=1.7.1)",
    "seaborn (>=0.13.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
